--- a/Ansible/roles/nfs_client/tasks/main.yml
+++ b/Ansible/roles/nfs_client/tasks/main.yml
@@ -8,14 +8,20 @@
   file:
     path: "{{ item }}"
     state: directory
-  loop: "{{ local_nfs_mount_paths }}"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+  loop: "{{ local_nfs_ro_mount_paths }}"
   # when: "nfs_repos_mount_point is not mount"
 
 - name: Ensure NFS read-only mount point exists
   file:
     path: "{{ item }}"
     state: directory
-  loop: "{{ local_nfs_mount_paths }}"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0755"
+  loop: "{{ local_nfs_rw_mount_paths }}"
+  # when: "nfs_repos_mount_point is not mount"
 
 - name: Mount NFS share
   ansible.posix.mount:
