--- a/Ansible/roles/nfs_server/tasks/main.yml
+++ b/Ansible/roles/nfs_server/tasks/main.yml
@@ -35,7 +35,7 @@
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: "0755"
-  loop: "{{ nfs_write_export_dirs }}"
+  loop: "{{ nfs_rw_export_dirs }}"
 
 - name: Add NFS export entry to /etc/exports
   lineinfile:
