--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -14,6 +14,7 @@ main_user: ans_mariusz
 control_plane_ip: 192.168.1.10
 main_machine_hostname: "control-plane"
 
+#### NFS #### 
 # CONTROL-PLANE Global settings!
 nfs_ro_export_dirs: 
   - "/mnt/repos"
@@ -22,3 +23,9 @@ nfs_ro_export_dirs:
 
 nfs_rw_export_dirs:
   - "/exports/{{ main_machine_hostname }}"
+
+# Paths exported by the nfs server  
+nfs_export_paths: "{{ nfs_ro_export_dirs + nfs_rw_export_dirs }}"
+
+# Destination paths for the nfs clients
+local_nfs_mount_paths: "{{ nfs_ro_export_dirs + nfs_rw_export_dirs }}"
