--- a/Ansible/roles/nfs_server/tasks/main.yml
+++ b/Ansible/roles/nfs_server/tasks/main.yml
@@ -28,14 +28,21 @@
     state: started
     enabled: yes
 
-- name: NFS - Ensure paths exists
+- name: NFS - Ensure read-only paths exists
+  file:
+    path: "{{ item }}"
+    state: directory
+    mode: "0755"
+  loop: "{{ nfs_ro_export_paths }}"
+
+- name: NFS - Ensure writable paths exists
   file:
     path: "{{ item }}"
     state: directory
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: "0755"
-  loop: "{{ nfs_export_paths }}"
+  loop: "{{ nfs_rw_export_paths }}"
 
 - name: Add NFS export entry to /etc/exports
   lineinfile:
