--- a/Docker/NewMongo/6gpt_mongo.yml
+++ b/Docker/NewMongo/6gpt_mongo.yml
@@ -18,9 +18,9 @@ services:
 
   node1:
     image: mongo:4.0.0
-    command: mongod --replSet replicaTest --bind_ip_all
-    ports:
-      - "27017:27018"
+    command: mongod --replSet replicaTest --port 27018 --bind_ip_all
+    ports: 
+      - "27018:27018"
     networks:
       - mongo
     deploy:
@@ -33,9 +33,9 @@ services:
 
   node2:
     image: mongo:4.0.0
-    command: mongod --replSet replicaTest --bind_ip_all
-    ports:
-      - "27017:27019"
+    command: mongod --replSet replicaTest --port 27019 --bind_ip_all
+    ports: 
+      - "27019:27019"
     networks:
       - mongo
     deploy:
