Replica set as a role

--- a/Ansible/main.yml
+++ b/Ansible/main.yml
@@ -5,9 +5,9 @@
   become: yes
   
   roles:
-    - common
-    - nfs_server 
-    - control_plane
+          #    - common
+          #    - nfs_server 
+          #    - control_plane
 
 - name: Set up node machines
   hosts: grp_nodes
@@ -15,7 +15,15 @@
   become: yes
 
   roles:
-    - nfs_client
-    - common
-    - node
+          #    - nfs_client
+          #    - common
+          #    - node
+
+- name: "Set up docker swarm service"
+  hosts: grp_control_plane
+  remote_user: "{{ main_user }}"
+  become: yes
+
+  roles:
+    - mongo_swarm      
 
