--- a/Ansible/main.yml
+++ b/Ansible/main.yml
@@ -5,9 +5,9 @@
   become: yes
   
   roles:
-#     - common
-#     - nfs_server 
-#     - control_plane
+    - common
+    - nfs_server 
+    - control_plane
 
 - name: Set up node machines
   hosts: grp_nodes
@@ -15,9 +15,9 @@
   become: yes
 
   roles:
-#    - nfs_client
-#    - common
-#    - node
+    - nfs_client
+    - common
+    - node
 
 - name: "Reboot" 
   hosts: grp_nodes
@@ -26,7 +26,9 @@
 
   tasks: 
     - name: Reboot
-      command: "/usr/sbin/reboot now"
+      reboot:
+        reboot_timeout: 300
+        test_command: uptime
 
 - name: "Set up docker swarm service"
   hosts: grp_control_plane
