--- a/Ansible/roles/mongo_swarm/tasks/main.yml
+++ b/Ansible/roles/mongo_swarm/tasks/main.yml
@@ -2,3 +2,7 @@
 # tasks file for mongo_swarm
 - name: "Create {{ stack_full }} service stack"
   command: docker stack deploy -c "{{ role_path }}/files/{{ stack_full }}.yml" "{{ stack_short }}"
+
+# tasks file for mongo_swarm
+- name: "Create {{ stack_full }} service stack"
+  command: mongosh --eval 'rs.initiate({_id : "replicaTest", members: [{ _id: 0, host: "127.0.0.1:27017" }]});'
