--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 # tasks file for mongo_replica_set
 
+- name: "Create {{ stack_full }} service stack"
+  command: "mongosh 192.168.1.10:27017 --eval 'rs.initiate()'"
+
+
 
 
