--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -11,6 +11,7 @@ repos_to_enable:
   - BaseOS
   - Kubernetes
   - docker-ce
+  - mongodb-org
 
 required_packages:
   - "docker-ce"
@@ -18,6 +19,7 @@ required_packages:
   - "containerd.io"
   - "iproute-tc"
   - "firewalld"
+  - "mongodb-mongosh"
 
 # Services required to be enabled on boot
 required_services:
