--- a/Ansible/inventory.ini
+++ b/Ansible/inventory.ini
@@ -1,8 +1,7 @@
 [grp_control_plane]
-192.168.1.10
+control-plane=192.168.1.10
 
 [grp_nodes]
-192.168.1.201
-192.168.1.202
-# 192.168.1.203
-# 
+node1=192.168.1.201
+node2=192.168.1.202
+# node3=192.168.1.203
