--- a/Ansible/inventory.ini
+++ b/Ansible/inventory.ini
@@ -1,7 +1,7 @@
 [grp_control_plane]
-control-plane=192.168.1.10
+control-plane ansible_host=192.168.1.10
 
 [grp_nodes]
-node1=192.168.1.201
-node2=192.168.1.202
-# node3=192.168.1.203
+node1 ansible_host=192.168.1.201
+node2 ansible_host=192.168.1.202
+# node3 ansible_host=192.168.1.203
