--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -4,8 +4,8 @@
 - name: "Create {{ stack_full }} service stack"
   command: "mongosh 192.168.1.10:27017 --eval 'rs.initiate()'"
 
-- name: Dodanie 
+- name: Add nodes to MongoDB Swarm
   command: >
-    "mongo --eval mongosh 192.168.1.10:27017 --eval 'rs.add("{{ item.1 }}:{{ 27018 + item.0 }}")'"
+    mongo 192.168.1.10:27017 --eval 'rs.add("{{ item.1 }}:{{ 27018 + item.0 }}")'
   with_indexed_items: "{{ groups['grp_nodes'] }}"
   run_once: true
