run_ansible corrected

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -48,4 +48,4 @@ runcmd:
   ### Hostname
   - nmcli general hostname control-plane 
   # Ansible-playbook 
-  # - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
+  - /usr/bin/ansible-playbook /mnt/ansible/main.yml -u ans_mariusz >> /home/ans_mariusz/ansible.log
