--- a/Ansible/main.yml
+++ b/Ansible/main.yml
@@ -5,9 +5,9 @@
   become: yes
   
   roles:
-    - common
-    - nfs_server 
-    - control_plane
+#    - common
+#    - nfs_server 
+#    - control_plane
 
 - name: Set up node machines
   hosts: grp_nodes
@@ -15,9 +15,9 @@
   become: yes
 
   roles:
-    - nfs_client
-    - common
-    - node
+#    - nfs_client
+#    - common
+#    - node
 
 - name: "Reboot" 
   hosts: grp_nodes
