old mongo_replica_set

--- a/Ansible/roles/mongo_swarm/files/mongo_replica_set_old.yml
+++ b/Ansible/roles/mongo_swarm/files/mongo_replica_set_old.yml
@@ -3,11 +3,13 @@ version: '3.6'
 services:
   control-plane:
     image: mongo:4.0.0
-    command: mongod --replSet replicaTest --bind_ip_all
+    command: ["/bin/bash", "-c", "/scripts/init-replica.sh && mongod --replSet replicaTest --bind_ip_all"]
     ports:
       - "27017:27017"
     volumes:
       - control-plane-data:/data/db
+      - ./init-replica.sh:/scripts/init-replica.sh
+      - ./init-replica.log:/scripts/init-replica.log
     networks:
       - mongo
     deploy:
@@ -20,11 +22,13 @@ services:
 
   node1:
     image: mongo:4.0.0
-    command: mongod --replSet replicaTest --port 27018 --bind_ip_all
+    command: ["/bin/bash", "-c", "/scripts/init-replica.sh && mongod --replSet replicaTest --port 2018 --bind_ip_all"]
     ports:
-      - "27018:27018"
+      - "2018:2018"
     volumes:
       - node1-data:/data/db
+      - ./init-replica.sh:/scripts/init-replica.sh
+      - ./init-replica.log:/scripts/init-replica.log
     networks:
       - mongo
     deploy:
@@ -37,11 +41,13 @@ services:
 
   node2:
     image: mongo:4.0.0
-    command: mongod --replSet replicaTest --port 27019 --bind_ip_all
+    command: ["/bin/bash", "-c", "/scripts/init-replica.sh && mongod --replSet replicaTest --port 2019 --bind_ip_all"]
     ports:
-      - "27019:27019"
+      - "2019:2019"
     volumes:
       - node2-data:/data/db
+      - ./init-replica.sh:/scripts/init-replica.sh
+      - ./init-replica.log:/scripts/init-replica.log
     networks:
       - mongo
     deploy:
@@ -60,3 +66,4 @@ volumes:
 networks:
   mongo:
     driver: overlay
+
