--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -24,7 +24,7 @@
 
 - name: Create database
   command: > 
-    mongosh 192.168.1.10:27017 mydatabase --eval '
+    mongosh --host 192.168.1.10:27017 mydatabase --eval '
     db.createCollection("mycollection");
     db.mycollection.insertMany([
       { name: "Alice", age: 30 },
