--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: Parse the replica set state to get primary name using jq
   command: >
     echo '{{ mongo_rs_status.stdout }}' | jq -r '.members[] | select(.stateStr == "PRIMARY") | .name'
-  register: primary_name_command
+  register: primary_name 
   ignore_errors: yes
 
 
