--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -31,8 +31,12 @@
 - name: Parse the replica set state to get primary name using jq
   command: >
     echo '{{ mongo_rs_status.stdout }}' | jq -r '.members[] | select(.stateStr == "PRIMARY") | .name'
-  register: primary_name 
+  register: primary_name_command
   ignore_errors: yes
+
+- name: Set primary name fact
+  set_fact:
+    primary_name: "{{ primary_name_command.stdout }}"
 
 
 - name: Debug primary name
