--- a/Ansible/roles/mongo_replica_set/tasks/main.yml
+++ b/Ansible/roles/mongo_replica_set/tasks/main.yml
@@ -26,7 +26,6 @@
   command: mongosh --quiet --eval 'rs.status()'
   register: mongo_rs_status
   ignore_errors: yes
-  when: replica_set_check.stdout == "1"
 
 - name: Extract syncingTo value using shell command
   shell: "echo '{{ mongo_rs_status.stdout }}' | grep 'PRIMARY' -B3 | grep name | awk -F'name: ' '{print $2}' | cut -d \"'\" -f 1 | sed s/,//g |  head -n 1"
@@ -47,7 +46,7 @@
     ]);
     '
   run_once: true
-  ignore_errors: true
+  when: replica_set_check.stdout != "1"
 
 - name: Verify database creation
   command: >
